--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Generador de Recibos de Sueldo</title>
+    <link rel="alternate" media="print" href="payslip.html" />
   </head>
 
   <body class="text-[#2D3047]">
     <div
-      class="text-2xl border-b border-[#419D78] p-2 font-bold italic bg-[#419D78] shadow shadow-[#2D3047]"
+      class="text-2xl border-b border-[#419D78] p-2 font-bold italic bg-[#419D78] shadow shadow-[#2D3047] mb-5"
     >
       Generador de Recibos de Sueldo
     </div>
 
     <div class="flex flex-row p-4 gap-4 justify-center">
-      <form class="flex flex-col gap-2 font-bold">
+      <form class="flex flex-col gap-2 font-bold mr-5">
         <div class="flex flex-row justify-between gap-2">
           <spam>Nombre</spam>
           <input
@@ -92,15 +93,6 @@
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
-          <spam>Antiguedad</spam>
-          <input
-            type="number"
-            name="antiguedad"
-            id="antiguedad"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none"
-          />
-        </div>
-        <div class="flex flex-row justify-between gap-2">
           <spam>Sueldo Basico</spam>
           <input
             type="number"
@@ -109,6 +101,15 @@
             placeholder="$ ------,--"
             step="0.01"
             class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none placeholder:italic placeholder:opacity-40"
+          />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Antiguedad</spam>
+          <input
+            type="number"
+            name="antiguedad"
+            id="antiguedad"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -150,13 +151,19 @@
         <button
           type="submit"
           onclick="generar(); return false"
-          class="rounded-md bg-[#419D78] h-8 mt-4 text-white italic"
+          class="rounded-md bg-[#419D78] h-8 mt-4 text-white italic hover:bg-[#3C906E] active:bg-[#368163]"
         >
           Generar
         </button>
+        <button
+          onclick="printExternal('payslip.html'); passvalues();"
+          class="rounded-md bg-[#419D78] h-8 mt-4 text-white italic hover:bg-[#3C906E] active:bg-[#368163]"
+        >
+          Version para Imprimir
+        </button>
       </form>
       <div
-        class="flex flex-col border-2 border-[#419D78] w-1/3 rounded-lg gap-2"
+        class="flex flex-col border-2 border-b-4 border-r-4 border-[#419D78] w-1/3 rounded-lg gap-2"
       >
         <header
           class="flex flex-row justify-center items-center border-b-4 border-[#419D78] w-full text-xl font-bold"
@@ -166,16 +173,17 @@
         <div class="grid grid-cols-2 min-w-fit">
           <ul class="gap-4">
             <ul class="border-b-2 px-2 py-1">
-              <li>Nombre:</li>
+              <!-- <li>Nombre:</li>
               <li>Apellido:</li>
               <li>CUIL:</li>
               <li>Legajo:</li>
               <li>Categoria:</li>
               <li>Division:</li>
               <li>Departamento:</li>
-              <li>Fecha de Ingreso:</li>
+              <li>Fecha de Ingreso:</li> -->
             </ul>
             <ul class="border-b-2 px-2 py-1">
+              <li>Valor Hora:</li>
               <li>Basico:</li>
               <li>Productividad:</li>
               <li>Presentismo:</li>
@@ -205,6 +213,7 @@
       </div>
     </div>
     <script src="main.js"></script>
+    <script src="pay.js"></script>
   </body>
 </html>
 <!-- Basico
@@ -221,9 +230,9 @@ Vacaciones
 <p>Las vacaciones son la mitad del basico, el presentismo y la bonificacion</p>
 Vacaciones gevis
 <p>Se cuentan todos los dias de antiguedad que tendra el empleado hasta fin de año, eso se divide por 20 para saber los dias que podra tomarse de vacaciones, y para saber cuanto se paga por dia se hace la cuenta original dividido 22</p>
-Jubilacion
-<p>La jubilacion es el 11% del sueldo basico, que al final se resta</p>
+Jubilacion (SIPA)
+<p>La jubilacion es el 11% del bruto, que al final se resta</p>
 Obra social
-<p>La obra social es el 3% del sueldo basico, que al final se resta</p>
+<p>La obra social es el 3% del sueldo bruto, que al final se resta</p>
 Ley 19032 (INSSJP)
-<p>Esta ley es el 3% del sueldo basico, que al final se resta</p> -->
+<p>Esta ley es el 3% del bruto, que al final se resta</p> -->
