--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             type="text"
             name="nombre"
             id="nombre"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none"
+            placeholder="----------"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -33,7 +34,8 @@
             type="text"
             name="apellido"
             id="apellido"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none"
+            placeholder="----------"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -62,7 +64,8 @@
             type="text"
             name="categoria"
             id="categoria"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none"
+            placeholder="----------"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -71,7 +74,8 @@
             type="text"
             name="division"
             id="division"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none"
+            placeholder="----------"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -80,7 +84,8 @@
             type="text"
             name="departamento"
             id="departamento"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none"
+            placeholder="----------"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -89,7 +94,7 @@
             type="date"
             name="ingreso"
             id="fechaingreso"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -109,7 +114,8 @@
             type="number"
             name="antiguedad"
             id="antiguedad"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none"
+            placeholder="----------"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -118,7 +124,8 @@
             type="number"
             name="extras50"
             id="extras50"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none"
+            placeholder="---"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -127,7 +134,8 @@
             type="number"
             name="extras100"
             id="extras100"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none"
+            placeholder="---"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -136,7 +144,8 @@
             type="number"
             name="feriados"
             id="feriados"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none"
+            placeholder="---"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <div class="flex flex-row justify-between gap-2">
@@ -145,7 +154,18 @@
             type="number"
             name="faltas"
             id="faltas"
-            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none"
+            placeholder="---"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none placeholder:italic placeholder:opacity-40"
+          />
+        </div>
+        <div class="flex flex-row justify-between gap-2">
+          <spam>Faltas Justificadas</spam>
+          <input
+            type="number"
+            name="faltasjustificadas"
+            id="faltasjustificadas"
+            placeholder="---"
+            class="w-1/2 bg-gradient-to-br from-gradientFirst to-gradientSecond bg-clip-text text-right font-bold text-[#419D78] placeholder:bg-gradient-to-br placeholder:from-gradientFirst placeholder:to-gradientSecond placeholder:bg-clip-text placeholder:text-[#419D78] border-b-2 border-[#419D78] focus:outline-none placeholder:italic placeholder:opacity-40"
           />
         </div>
         <button
@@ -155,15 +175,10 @@
         >
           Generar
         </button>
-        <button
-          onclick="printExternal('payslip.html'); passvalues();"
-          class="rounded-md bg-[#419D78] h-8 mt-4 text-white italic hover:bg-[#3C906E] active:bg-[#368163]"
-        >
-          Version para Imprimir
-        </button>
       </form>
       <div
         class="flex flex-col border-2 border-b-4 border-r-4 border-[#419D78] w-1/3 rounded-lg gap-2"
+        id="form"
       >
         <header
           class="flex flex-row justify-center items-center border-b-4 border-[#419D78] w-full text-xl font-bold"
@@ -173,14 +188,14 @@
         <div class="grid grid-cols-2 min-w-fit">
           <ul class="gap-4">
             <ul class="border-b-2 px-2 py-1">
-              <!-- <li>Nombre:</li>
+              <li>Nombre:</li>
               <li>Apellido:</li>
               <li>CUIL:</li>
               <li>Legajo:</li>
               <li>Categoria:</li>
               <li>Division:</li>
               <li>Departamento:</li>
-              <li>Fecha de Ingreso:</li> -->
+              <li>Fecha de Ingreso:</li>
             </ul>
             <ul class="border-b-2 px-2 py-1">
               <li>Valor Hora:</li>
@@ -197,6 +212,7 @@
               <li>INSSJP:</li>
               <li>Obra Social:</li>
               <li>Faltas:</li>
+              <li>Faltas Justificadas:</li>
             </ul>
             <ul class="border-b-2 px-2 py-1">
               <li>Aguinaldo:</li>
@@ -210,6 +226,7 @@
           </ul>
           <div id="blankid"></div>
         </div>
+        <div id="blankbut" class="flex justify-center p-2"></div>
       </div>
     </div>
     <script src="main.js"></script>
