--- a/payslip.html
+++ b/payslip.html
@@ -104,21 +104,21 @@
                 </tr>
                 <tr>
                   <td>Feriados</td>
-                  <td></td>
+                  <td id="pay-feriados"></td>
                 </tr>
                 <tr>
                   <td>Horas Extras (50%)</td>
-                  <td></td>
+                  <td id="pay-extras50"></td>
                 </tr>
                 <tr>
                   <td>Horas Extras (100%)</td>
-                  <td></td>
+                  <td id="pay-extras100"></td>
                 </tr>
               </tbody>
               <tfoot>
                 <tr>
                   <td>Remuneracion Bruta</td>
-                  <td>123 009 344 234.00</td>
+                  <td id="pay-bruto"></td>
                 </tr>
               </tfoot>
             </table>
@@ -133,29 +133,29 @@
               <tbody>
                 <tr>
                   <td>SIPA</td>
-                  <td></td>
+                  <td id="pay-sipa"></td>
                 </tr>
                 <tr>
                   <td>INSSJP</td>
-                  <td></td>
+                  <td id="pay-inssjp"></td>
                 </tr>
                 <tr>
                   <td>Obra Social</td>
-                  <td></td>
+                  <td id="pay-obrasocial"></td>
                 </tr>
                 <tr>
                   <td>Faltas</td>
-                  <td></td>
+                  <td id="pay-faltas"></td>
                 </tr>
                 <tr>
                   <td>Faltas Injustificadas</td>
-                  <td></td>
+                  <td id="pay-faltasinjus"></td>
                 </tr>
               </tbody>
               <tfoot>
                 <tr>
-                  <td>Sub-total</td>
-                  <td>123 009 344 234.00</td>
+                  <td>Total Deducciones</td>
+                  <td id="pay-deducciones"></td>
                 </tr>
               </tfoot>
             </table>
@@ -163,28 +163,24 @@
             <table>
               <thead>
                 <tr>
-                  <td>Earnings</td>
-                  <td>Amount(Naira)</td>
+                  <td>Bonificaciones</td>
+                  <td>Monto ($ARS)</td>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>Deductions</td>
-                  <td></td>
+                  <td>Aguinaldo</td>
+                  <td id="pay-aguinaldo"></td>
                 </tr>
                 <tr>
-                  <td>Basic salary</td>
-                  <td>1 200000.00</td>
-                </tr>
-                <tr>
-                  <td>Basic salary</td>
-                  <td></td>
+                  <td>Vacaciones</td>
+                  <td id="pay-vacaciones"></td>
                 </tr>
               </tbody>
               <tfoot>
                 <tr>
-                  <td>Sub-total</td>
-                  <td>123 009 344 234.00</td>
+                  <td>Total Bonificaciones</td>
+                  <td id="pay-totalboni"></td>
                 </tr>
               </tfoot>
             </table>
@@ -192,28 +188,24 @@
             <table>
               <thead>
                 <tr>
-                  <td>Earnings</td>
-                  <td>Amount(Naira)</td>
+                  <td>Total</td>
+                  <td>Monto ($ARS)</td>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>Deductions</td>
-                  <td></td>
+                  <td>Remuneracion Bruta</td>
+                  <td id="pay-bruto"></td>
                 </tr>
                 <tr>
-                  <td>Basic salary</td>
-                  <td>1 200000.00</td>
-                </tr>
-                <tr>
-                  <td>Basic salary</td>
-                  <td></td>
+                  <td>Total Deducciones</td>
+                  <td id="pay-deducciones"></td>
                 </tr>
               </tbody>
               <tfoot>
                 <tr>
-                  <td>Sub-total</td>
-                  <td>123 009 344 234.00</td>
+                  <td>Remuneracion Neta</td>
+                  <td id="pay-neto"></td>
                 </tr>
               </tfoot>
             </table>
