--- a/payslip.html
+++ b/payslip.html
@@ -195,11 +195,11 @@
               <tbody>
                 <tr>
                   <td>Remuneracion Bruta</td>
-                  <td id="pay-bruto"></td>
+                  <td id="pay-bruto-2"></td>
                 </tr>
                 <tr>
                   <td>Total Deducciones</td>
-                  <td id="pay-deducciones"></td>
+                  <td id="pay-deducciones-2"></td>
                 </tr>
               </tbody>
               <tfoot>
@@ -225,7 +225,6 @@
         >
       </div>
       <div>
-        <span>© 2019 SeamlessHR. All rights reserved.</span>
       </div>
     </div>
     <script src="pay.js"></script>
